--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-12">
-					<h1>William T. Kelvin</h1>
-					<h3>Web Designer | kelvin@blacktie.co</h3>
+					<h1>Gustavo Nogueira</h1>
+					<h3>Mobile Software Developer | guromito@gmail.com</h3>
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
 		</div><!--/.container -->
@@ -75,7 +75,7 @@
 					<h5>ABOUT</h5>
 				</div>
 				<div class="col-lg-6">
-					<p>I'm web designer & front-end developer with 7 years of professional experience. I'm interested in all kinds of visual communication, but my major focus is on designing web, mobile & tablet interfaces. I also have skills in other fields like branding, icon design or web development.</p>
+					<p>I'm Mobile Software Developer and Backend developer.  I'm interested in both iOS and Android, but my major focus is Objective-C and Core Data development. I'm a iOS Developer with 1 year of experience and I have already worked in this field. </p>
 				</div>
 				<div class="col-lg-3">
 					<p><a href="#"><i class="icon-file"></i></a> <sm>DOWNLOAD PDF</sm></p>
@@ -95,25 +95,27 @@
 					<h5>EDUCATION</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><t>Master of Web Design</t><br/>
-						St. Patrick University <br/>
-						<i>3 Years Course</i>
+					<p><t>Bachelor of Science in Computer Science</t><br/>
+						California State University, Long Beach <br/>
+						<i>1 year course</i>
 					</p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>GRADUATING IN MAY 2014</sm><br/>
+					<p><sm>FINISH IN MAY 2015</sm><br/>
 					<imp><sm>IN PROGRESS</sm></imp>
 					</p>
 				</div>
 	
 				<div class="col-lg-6 col-lg-offset-3">
-					<p><t>Degree of Web Developer</t><br/>
-						Hastings University <br/>
-						<i>2 Years Course</i>
+					<p><t>Bachelor of Science in Information Systems</t><br/>
+						University of Sao Paulo <br/>
+						<i>4 Years Course</i>
 					</p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>JUNE 2012</sm></p>
+					<p><sm>FINISH IN FEBRUARY 2017</sm><br>
+                    <imp><sm>IN PROGRESS</sm></imp>
+                    </p>
 				</div>
 	
 		</div><!--/.row -->
@@ -129,18 +131,9 @@
 				<div class="col-lg-2 col-lg-offset-1">
 					<h5>WORK</h5>
 				</div>
-				<div class="col-lg-6">
-					<p><t>Front-end Developer</t><br/>
-						Black Tie Corp. <br/>
-					</p>
-					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
-				</div>
-				<div class="col-lg-3">
-					<p><sm>AUGUST 2012 - CURRENT</sm></p>
-				</div>
 	
 				<div class="col-lg-6 col-lg-offset-3">
-					<p><t>Web Designer - Intern</t><br/>
+					<p><t>iOS Mobile Software Developer - Intern</t><br/>
 						Onassis Ltd. <br/>
 					</p>
 					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
@@ -152,37 +145,6 @@
 		<br>
 		<hr>
 	</div><!--/.container -->
-
-
-	<!--AWARDS DESCRIPTION -->
-	<div class="container desc">
-		<div class="row">
-				<div class="col-lg-2 col-lg-offset-1">
-					<h5>AWARDS</h5>
-				</div>
-				<div class="col-lg-6">
-					<p><t>Best Web Design</t><br/>
-						Black Tie Site <br/>
-					</p>
-				</div>
-				<div class="col-lg-3">
-					<p><sm>NOVEMBER 2013</sm></p>
-				</div>
-	
-				<div class="col-lg-6 col-lg-offset-3">
-					<p><t>Designer of the Year</t><br/>
-						Awwwards Site
-					</p>
-					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</more></p>
-				</div>
-				<div class="col-lg-3">
-					<p><sm>2013</sm></p>
-				</div>
-		
-		</div><!--/.row -->
-		<br>
-	</div><!--/.container -->
-	
 	
 	<!--SKILLS DESCRIPTION -->
 	<div id="skillswrap">
