--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-12">
-					<h1>Gustavo Nogueira</h1>
+					<h1>Gustavo R. Nogueira</h1>
 					<h3>Mobile Software Developer | guromito@gmail.com</h3>
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
