--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-12">
-					<h1>Gustavo R. Nogueira</h1>
+					<h1>Gustavo R.<br> Nogueira</h1>
 					<h3>Mobile Software Developer | guromito@gmail.com</h3>
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
@@ -278,7 +278,7 @@
 					<h5>PORTFOLIO</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><img class="img-responsive" src="assets/img/port01.jpg" alt=""></p>
+					<p><img class="img-responsive" src="assets/img/iphone.jpg" alt=""></p>
 				</div>
 				<div class="col-lg-3">
 					<p>CANALS OF ENGLAND</p>
@@ -288,7 +288,7 @@
 				</div>
 	
 				<div class="col-lg-6 col-lg-offset-3">
-					<p><img class="img-responsive" src="assets/img/port02.jpg" alt=""></p>
+					<p><img class="img-responsive" src="assets/img/iphoneleft.jpg" alt=""></p>
 				</div>
 				<div class="col-lg-3">
 						<p>SANKEY</p>
