--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 					<h5>PORTFOLIO</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><img class="img-responsive" src="assets/img/iphone.jpg" alt=""></p>
+					<p><img class="img-responsive" src="assets/img/calcs.png" alt=""></p>
 				</div>
 				<div class="col-lg-3">
 					<p>CANALS OF ENGLAND</p>
@@ -288,7 +288,7 @@
 				</div>
 	
 				<div class="col-lg-6 col-lg-offset-3">
-					<p><img class="img-responsive" src="assets/img/iphoneleft.jpg" alt=""></p>
+					<p><img class="img-responsive" src="assets/img/gym.png" alt=""></p>
 				</div>
 				<div class="col-lg-3">
 						<p>SANKEY</p>
