--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 					<p><img class="img-responsive" src="assets/img/calcs.png" alt=""></p>
 				</div>
 				<div class="col-lg-3">
-					<p>CANALS OF ENGLAND</p>
+					<p>Calcs</p>
 				<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
 					<sm><i class="icon-tag"></i> design</sm></more> 
 				</p>
@@ -291,17 +291,17 @@
 					<p><img class="img-responsive" src="assets/img/gym.png" alt=""></p>
 				</div>
 				<div class="col-lg-3">
-						<p>SANKEY</p>
+						<p>Gym Helper</p>
 					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
 						<sm><i class="icon-tag"></i> front-end</sm></more> 
 					</p>
 				</div>
 				
 				<div class="col-lg-6 col-lg-offset-3">
-					<p><img class="img-responsive" src="assets/img/port03.jpg" alt=""></p>
+					<p><img class="img-responsive" src="assets/img/port03.jpg" alt="iphone.png"></p>
 				</div>
 				<div class="col-lg-3">
-						<p>WE GROW</p>
+						<p>Recycle Games</p>
 					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
 						<sm><i class="icon-tag"></i> web design</sm></more> 
 					</p>
