change repository configuration

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<p>I'm a Mobile Software and Backend developer.  I'm interested in both iOS and Android, but my major focus is Objective-C and Core Data development. I have already worked with iOS Development for 1 year. </p>
 				</div>
 				<div class="col-lg-3">
-					<p><a href="resume.pdf" download="resume.pdf" title="Gustavo R. Nogueira Resume"><i class="icon-file"></i></a> <sm>DOWNLOAD PDF</sm></p>
+					<p><a href="/assets/" download="resume.pdf" title="Gustavo R. Nogueira Resume"><i class="icon-file"></i></a> <sm>DOWNLOAD PDF</sm></p>
 				</div>
 				
 			</div><!--/.row -->
