--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
 				<div class="col-lg-2 col-lg-offset-1">
 					<h5>EDUCATION</h5>
 				</div>
-				<div class="col-lg-6">
+               <div class="col-lg-6">
+                <img src="assets/img/csulb_logo.png" alt="uspLogo" class="img-responsive">
+                </div>
+				<div class="col-lg-6 col-lg-offset-3">
 					<p><t>Bachelor of Science in Computer Science</t><br/>
 						California State University, Long Beach <br/>
 						<i>1 year course</i>
@@ -105,8 +108,11 @@
 					<imp><sm>IN PROGRESS</sm></imp>
 					</p>
 				</div>
-	
-				<div class="col-lg-6 col-lg-offset-3">
+				
+                <div class="col-lg-6 col-lg-offset-3">
+                <img src="assets/img/logo_USP.png" alt="uspLogo" class="img-responsive">
+                </div>
+		  <div class="col-lg-6 col-lg-offset-3">
 					<p><t>Bachelor of Science in Information Systems</t><br/>
 						University of Sao Paulo <br/>
 						<i>4 Years Course</i>
@@ -115,6 +121,20 @@
 				<div class="col-lg-3">
 					<p><sm>FINISH IN FEBRUARY 2017</sm><br>
                     <imp><sm>IN PROGRESS</sm></imp>
+                    </p>
+				</div>
+                
+                <div class="col-lg-6 col-lg-offset-3">
+                <img src="assets/img/fecap_logo.png" alt="uspLogo" class="img-responsive">
+                </div>
+                <div class="col-lg-6 col-lg-offset-3">
+					<p><t>Technical High School in Digital Games Development</t><br/>
+						FECAP <br/>
+						<i>3 Years Course</i>
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>COMPLETED IN 2012</sm><br>
                     </p>
 				</div>
 	
