--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 				</div>
 				<div class="col-lg-3">
 					<p>Calcs</p>
-				<p><more>During my High School I was supposed to learn a bunch of subjects involving math and calcs. So I decided to make my homework and my life easier creating this app that used to give me the whole solution of the problems. <br/><br/>
+				<p><more>During my High School I was supposed to learn a bunch of subjects involving math and calculus. So I decided to make my homework and life easier by creating an app that gives me the solution to the problem. <br/><br/>
 					<sm><i class="icon-tag"></i> iPhone</sm></more> 
 				</p>
 				</div>
@@ -315,7 +315,7 @@
 				</div>
 				<div class="col-lg-3">
 						<p>Gym Helper</p>
-					<p><more>I developed the Gym Helper to help me in the gym. Really, it is to help me in the gym. It was better for me because since then I didn't have to print my workout routine everyday to know how and which machines I was supposed to do.<br/><br/>
+					<p><more>I developed the Gym Helper to help my fitness goals. Really, it is to help me in the gym. It is better for me because now I don't have to print my workout routine everyday to know how and which machines I am supposed to use.<br/><br/>
 						<sm><i class="icon-tag"></i> iPhone</sm></more> 
 					</p>
 				</div>
@@ -325,7 +325,7 @@
 				</div>
 				<div class="col-lg-3">
 						<p>Recycle Games</p>
-					<p><more>Recycle Games is a Plataform still in developing that helps users who want to change used games for consoles like PS4 or XBox. It works like this: you sign up and add the games that you have and the games that you would like. Then you just need to wait until the app gives you a match with someone who wants one of your games and has one the games that you want. Simple, isn't it? <br/><br/>
+					<p><more>Recycle Games is a Plataform still in developing that helps users who want to exchange used games for consoles like PS4 or XBox. It works like this: you sign up and add the games that you have and the games that you would like. Then you just need to wait until the app gives you a match with someone who wants one of your games and has one the games that you want. Simple, isn't it? <br/><br/>
 						<sm><i class="icon-tag"></i> iPhone</sm></more> 
 					</p>
 				</div>
@@ -346,7 +346,7 @@
 				</div>
 				<div class="col-lg-3">
 						<p>Tokio Marine Nosso Corretor</p>
-					<p><more>Nosso Corretor is a tool to brokers keep in contact with theirs customers. They can see reports about sales, policies besides help customer with claims. Developed while in MoWA.<br/><br/>
+					<p><more>Nosso Corretor is a tool for sales representatives to be able to keep in contact with theirs customers. They can see reports about sales, policies and help customers with claims. Developed while in MoWA.<br/><br/>
 						<sm><i class="icon-tag"></i> iPhone</sm></more>
                         <a href="https://itunes.apple.com/us/app/nosso-corretor/id885183378?mt=8" target="_blank"><img src="assets/img/appstore.png" alt="appstore.png" class="img-responsive"></a>
 					</p>
