update text in mow

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 					<p><t>iOS Mobile Software Developer - Intern</t><br/>
 						MoWA - Mobile Wireless Applications <br/>
 					</p>
-					<p><more>Responsible for developing iPhone Applications. Directly involved and responsible for two big projects for one multinational.</more></p>
+					<p><more>Responsible for developing iPhone Applications. Directly involved for two big projects for one multinational.</more></p>
 				</div>
 				<div class="col-lg-3">
 					<p><sm>JUNE 2010 - JULY 2012</sm></p>
