--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<h5>ABOUT</h5>
 				</div>
 				<div class="col-lg-6">
-					<p>I'm a Mobile Software and back-end developer.  I'm interested in both iOS and Android, but my major focus is Objective-C and Core Data development. I have already worked with iOS Development for 1 year. </p>
+					<p>As a programmer, I always seek for new challenges and knowledge. My major focus is Objective-C and Core Data development. I have already worked with iOS Development for 1 year. </p>
 				</div>
 				<div class="col-lg-3">
 					<p><a href="assets/resume.pdf" target="_blank"><i class="icon-file"></i><sm>DOWNLOAD PDF</sm></a></p>
